tests/positive/basic/term_noninteractive_info/input.ci
void main() {
    print(toString(termIsTTY()) + "\n");
    TerminalSize sz = termGetSize();
    print(toString(sz.width) + "x" + toString(sz.height) + "\n");
}
