tests/negative/semantic/wrong_arg_count_getenv/input.ci
void main() {
    print(toString(getEnv("A")) + "\n");
}
